--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Repositorio Personal</title>
+<title>Reinan Medina G.</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -36,13 +36,13 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" id="home">
-    <img class="w3-image" src="https://www.ucentral.edu.co/sites/default/files/inline-images/02-21-2019-maestria-analitica-de-datos_0.jpg" alt="Fashion Blog" width="1600" height="1060">
+    <img class="w3-image" src="https://raw.githubusercontent.com/Reinanm/Visualizacion/master/Imagenes/ReinanCV.png" alt="Fashion Blog" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-text-white">Universidad Central de Colombia</h1>
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>MAESTRIA EN ANALITICA DE DATOS</b></h1>
       <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SIGUENOS</button></h6>
         </div>
-      <a href="https://www.ucentral.edu.co/noticentral/maestria-analitica-datos-obtiene-registro-calificado">Ir a la U central</a>
+      
   </header>
 
   <!-- Grid -->
