--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
   h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
 body {font-family: "Open Sans"}
 </style>
-<body class="w3-light-white">
-
-<!-- Barra de Navegacion de medios sociales -->
-<div class="w3-bar w3-black w3-hide-small">
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
-</div>
+<body class="w3-light-red">
   
 <!-- w3-content defines a container for fixed size centered content, 
 and is wrapped around the whole page content, except for the footer in this example -->
@@ -31,31 +20,26 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- Header -->
   <header class="w3-container w3-center w3-padding-48 w3-white">
     <h1 class="w3-xxxlarge"><b>REINAN MEDINA G.</b></h1>
-    <h6><i>Bienvenido</i> al mundo de la <span class="w3-tag">VISUALIZACIÓN</span></h6>
+    <h6><i>Bienvenido</i> a mi repositorio <span class="w3-tag">PERSONAL</span></h6>
   </header>
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" id="home">
     <img class="w3-image" src="https://raw.githubusercontent.com/Reinanm/Visualizacion/master/Imagenes/ReinanCV.png" alt="Fashion Blog" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
-      <h1 class="w3-text-white">Universidad Central de Colombia</h1>
-      <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>MAESTRIA EN ANALITICA DE DATOS</b></h1>
-      <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SIGUENOS</button></h6>
-        </div>
-      
+             </div>
   </header>
 
   <!-- Grid -->
   <div class="w3-row w3-padding w3-border">
-
-    <!-- Blog entries -->
+    <!-- CAPITULOS -->
     <div class="w3-col l8 s12">
     
       <!-- Blog entry -->
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
-          <h3>CURSO INICIAL</h3>
-          <h5>Aprendiendo con Python, <span class="w3-opacity">Junio, 2020</span></h5>
+          <h3>PRESENTACIÓN</h3>
+          <h5>Ingeniero Industrial, <span class="w3-opacity">UCC</span></h5>
         </div>
 
         <div class="w3-justify">
