--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
 
         <div class="w3-justify">
-          <img src="https://raw.githubusercontent.com/Reinanm/Visualizacion/master/Imagenes/Bogc19.png" alt="Covid en Bogota RMG" style="width:100%" class="w3-padding-16">
+          <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG-20170202-WA0007.jpg" alt="Covid en Bogota RMG" style="width:100%" class="w3-padding-16">
           <br>
           <p><strong>Graficando en Python!</strong> Para efectuar la practica en el manejo de la visualizacion de los datos, y como una primera fase de aprendizaje, se incio bajo la intruccion de nuestro director de materia Prof:<i> Carlos Zainea</i>, una visualizacion bajo codigo de Python y creado desde un Notebook de Jupyter.</p>
           <p> Es asi como, para manejar los vinculos automaticos a paginas de datos abiertos y direcciones dela Web, se tomo una visualizacion sobre el comportamiento del Covid 19 en la ciudad de Bogotá, en un archivo que es actualizado a diario por la alcaldia de la ciudad.</p>
           <a href="https://github.com/Reinanm/Visualizacion/blob/master/Cuadernos/covidbogota.py>Ver archivo</a>https://github.com/Reinanm/Visualizacion/blob/master/Cuadernos/covidbogota.py
           <br/>
           <a target="_blank" href="http://saludata.saludcapital.gov.co/osb/index.php/datos-de-salud/enfermedades-trasmisibles/covid19//">Ir a la pagina del Distrito</a>
-          <a  href="http://saludata.saludcapital.gov.co/osb/datos_abiertos_osb/enf-transmisibles/OSB_EnfTransm-COVID-19.csv">Descargar archivo</a>          
+          <a  href=""https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/vidUCC.mp4">Descargar archivo</a>          
           <br/>
           <p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>
           <p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>
@@ -79,7 +79,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-col l4">
       <!-- About Card -->
       <div class="w3-white w3-margin">
-        <img src="https://raw.githubusercontent.com/Reinanm/Visualizacion/master/Imagenes/ReinanCV.png" alt="Jane" style="width:100%" class="w3-grayscale">
+        <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG_0997.JPG" alt="Jane" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
           <h4>Quien soy?</h4>
           <p>Ingeniero Industrial en estudio de la Maestria en Analitica de Datos enla Universidad Central, Suboficial Tecnico Naval en Armas pesadas retirado de la Armada Nacional, Dirigente Scout grupos 14 Warrington y 41 "Guardianes de los cerros.</p>
