--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ and is wrapped around the whole page content, except for the footer in this exam
           <p> Es asi como, para manejar los vinculos automaticos a paginas de datos abiertos y direcciones dela Web, se tomo una visualizacion sobre el comportamiento del Covid 19 en la ciudad de Bogotá, en un archivo que es actualizado a diario por la alcaldia de la ciudad.</p>
           <a href="https://github.com/Reinanm/Visualizacion/blob/master/Cuadernos/covidbogota.py>Ver archivo</a>https://github.com/Reinanm/Visualizacion/blob/master/Cuadernos/covidbogota.py
           <br/>
-          <a target="_blank" href="http://saludata.saludcapital.gov.co/osb/index.php/datos-de-salud/enfermedades-trasmisibles/covid19//">Ir a la pagina del Distrito</a>
-          <a  href=""https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/vidUCC.mp4">Descargar archivo</a>          
+          <a target="_blank" href="https://www.youtube.com/watch?v=dERzqBPi3pM&t=98s">Procesos de Planta</a>
+          <a  href="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/vidUCC.mp4">Egresados UCC</a>          
           <br/>
           <p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>
           <p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>
