--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Reinan Medina G.</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/favicon.ico">
+<!--link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/favicon.ico"-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -46,10 +46,8 @@ and is wrapped around the whole page content, except for the footer in this exam
         <div class="w3-justify">
           <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG-20170202-WA0007.jpg" alt="Covid en Bogota RMG" style="width:100%" class="w3-padding-16">
           <br>
-          <p><strong>Graficando en Python!</strong> Para efectuar la practica en el manejo de la visualizacion de los datos, y como una primera fase de aprendizaje, se incio bajo la intruccion de nuestro director de materia Prof:<i> Carlos Zainea</i>, una visualizacion bajo codigo de Python y creado desde un Notebook de Jupyter.</p>
-          <p> Es asi como, para manejar los vinculos automaticos a paginas de datos abiertos y direcciones dela Web, se tomo una visualizacion sobre el comportamiento del Covid 19 en la ciudad de Bogotá, en un archivo que es actualizado a diario por la alcaldia de la ciudad.</p>
-          <a href="https://github.com/Reinanm/Visualizacion/blob/master/Cuadernos/covidbogota.py>Ver archivo</a>https://github.com/Reinanm/Visualizacion/blob/master/Cuadernos/covidbogota.py
-          <br/>
+          <p><strong>PRALCOBAR 2.0!</strong> A traves de le experiencia comercial y aplicando a conceptos logisticos se creo un proceso de etiquetado y control de inventarios en la planta de Chia.</p>
+          <p> Este programa se implemento con codificacion muy sencilla en lenguaje Visual Basic, como un pionero de futuras aplicaciones ofimaticas y generando una Base para los informes de Balance de masa y efectividad de producción en las maquinas de proceso.</p>
           <a target="_blank" href="https://www.youtube.com/watch?v=dERzqBPi3pM&t=98s">Procesos de Planta</a>
           <a  href="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/vidUCC.mp4">Egresados UCC</a>          
           <br/>
@@ -81,7 +79,10 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class="w3-white w3-margin">
         <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG_0997.JPG" alt="Jane" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
-          <h4>Quien soy?</h4>
+          <h2>HOBBY</h2>
+          <p>Recordando la experiencia naval, en los tiempos de ocio me aficiono por la construccion de pequeños modelosm, de preferencia buques de vela, Lo mas marinero!
+         <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG-20171206-WA0005.jpg" alt="Jane" style="width:100%" class="w3-grayscale">
+           <h2>Descripción muy General</h2>
           <p>Ingeniero Industrial en estudio de la Maestria en Analitica de Datos enla Universidad Central, Suboficial Tecnico Naval en Armas pesadas retirado de la Armada Nacional, Dirigente Scout grupos 14 Warrington y 41 "Guardianes de los cerros.</p>
          <p>Experiencia Comercial, de 16 años,en consumo masivo como supervisor y director de area en Medellín, la costa Atlantica y Bogotá. Analista operacional y Logistico en empresas de sector Lacteo, asesor en procesos de mejora operacional y ofimatización para la información. </p> 
         </div>
