--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
 
         <div class="w3-justify">
-          <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG-20170202-WA0007.jpg" alt="Covid en Bogota RMG" style="width:100%" class="w3-padding-16">
+          <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG-20170202-WA0007.jpg" alt="Resumen CV" style="width:100%" class="w3-padding-16"title="Imagén propia">
           <br>
           <p><strong>PRALCOBAR 2.0!</strong> A traves de le experiencia comercial y aplicando a conceptos logisticos se creo un proceso de etiquetado y control de inventarios en la planta de Chia.</p>
           <p> Este programa se implemento con codificacion muy sencilla en lenguaje Visual Basic, como un pionero de futuras aplicaciones ofimaticas y generando una Base para los informes de Balance de masa y efectividad de producción en las maquinas de proceso.</p>
@@ -77,12 +77,17 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-col l4">
       <!-- About Card -->
       <div class="w3-white w3-margin">
+        <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/lOGOPROGR.jpg" alt="Jane" style="width:100%" class="w3-grayscale">
+        <div class="w3-container w3-black">
+          <h2>HOBBY</h2>
         <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG_0997.JPG" alt="Jane" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
           <h2>HOBBY</h2>
+          <br>
           <p>Recordando la experiencia naval, en los tiempos de ocio me aficiono por la construccion de pequeños modelosm, de preferencia buques de vela, Lo mas marinero!
          <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG-20171206-WA0005.jpg" alt="Jane" style="width:100%" class="w3-grayscale">
-           <h2>Descripción muy General</h2>
+          <br> 
+          <h2>Descripción General</h2>
           <p>Ingeniero Industrial en estudio de la Maestria en Analitica de Datos enla Universidad Central, Suboficial Tecnico Naval en Armas pesadas retirado de la Armada Nacional, Dirigente Scout grupos 14 Warrington y 41 "Guardianes de los cerros.</p>
          <p>Experiencia Comercial, de 16 años,en consumo masivo como supervisor y director de area en Medellín, la costa Atlantica y Bogotá. Analista operacional y Logistico en empresas de sector Lacteo, asesor en procesos de mejora operacional y ofimatización para la información. </p> 
         </div>
