--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ and is wrapped around the whole page content, except for the footer in this exam
             <hr>
               <div class="w3-col l2 m3">
                 <img src="/w3images/avatar_smoke.jpg" style="width:90px;">
-              </div>
+                <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/043.jpg"alt="Resumen CV" style="width:100%" class="w3-padding-16"title="Imagén propia">
+            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/045.jpg" alt="Resumen CV" style="width:100%" class="w3-padding-16"title="Imagén propia">
+            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/047.jpg" alt="Resumen CV" style="width:100%" class="w3-padding-16"title="Imagén propia">
+            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/136.jpg"alt="Resumen CV" style="width:100%" class="w3-padding-16"title="Imagén propia">
+            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG_0989.JPG" alt="Resumen CV" style="width:100%" class="w3-padding-16"title="Imagén propia">
+            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/amanecer naval.jpg" alt="Resumen CV" style="width:100%" class="w3-padding-16"title="Imagén propia">
               <div class="w3-col l10 m9">
                 <h4>George <span class="w3-opacity w3-medium">May 3, 2015, 6:32 PM</span></h4>
                 <p>Great blog post! Following</p>
-                <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/043.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/045.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/047.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/136.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/IMG_0989.JPG" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <img src="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/amanecer naval.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+           
               </div>
           </div>
         </div>
