--- a/index.html
+++ b/index.html
@@ -50,14 +50,26 @@ and is wrapped around the whole page content, except for the footer in this exam
           <p> Este programa se implementó con codificación muy sencilla en lenguaje Visual Basic, como un pionero de futuras aplicaciones ofimáticas y generando una base para los informes de balance de masa y efectividad de producción (EOE) en las máquinas de proceso.</p>
           <a target="_blank" href="https://www.youtube.com/watch?v=dERzqBPi3pM&t=98s">Procesos de Planta</a>
           <a  href="https://raw.githubusercontent.com/Reinanm/reinanm.github.io/master/Imag/vidUCC.mp4">Egresados UCC</a>          
-          <br/>
+<a  target="_blank" href="http://saludata.saludcapital.gov.co/osb/index.php/datos-de-salud/enfermedades-trasmisibles/covid19//">Ir a la página del Distrito</a>
+          <a  href="http://saludata.saludcapital.gov.co/osb/datos_abiertos_osb/enf-transmisibles/OSB_EnfTransm-COVID-19.csv">Descargar archivo</a>          
+
           <p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>
-          <p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>
+          <p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>
           <p class="w3-clear"></p>
           <div class="w3-row w3-margin-bottom" id="demo1" style="display:none">
             <hr>
               <div class="w3-col l2 m3">
-               
+                <img src="/w3images/avatar_smoke.jpg" style="width:90px;">
+              </div>
+              <div class="w3-col l10 m9">
+                <h4>George <span class="w3-opacity w3-medium">May 3, 2015, 6:32 PM</span></h4>
+                <p>Great blog post! Following</p>
+              </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+
 
         
     <!-- END BLOG ENTRIES -->
